--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
       "import": "./dist/module.mjs"
     }
   },
+  "./runtime": {
+    "types": "./dist/runtime/index.d.ts",
+    "import": "./dist/runtime/index.mjs"
+  },
+  "./runtime/*": {
+    "types": "./dist/runtime/*.d.ts",
+    "import": "./dist/runtime/*.mjs"
+  },
+  "types": "./dist/types.d.mts",
   "main": "./dist/module.mjs",
   "typesVersions": {
     "*": {
